[TPS-41] Adding password reset capability
