# openapi/olsnet.yaml
@@ -150,6 +150,41 @@ paths:
           description: User not logged in
       security:
         - main: []
+  /pw_reset:
+    post:
+      summary:
+        Requests that a password reset token be sent to the given email address
+      tags:
+        - Authentication
+      parameters:
+        - $ref: '#/parameters/reset_start'
+      description: |
+        Will request a password reset code be sent to the e-mail address provided in the form body.
+        Will result in an e-mail being sent with an access code. The access code will have a 15 minute timeout.
+        No new reset codes will be able to be generated for the same email address within the timeout window.
+        Will generate a refresh token if the email address is valid, the PUT verb for this endpoint will require
+        a valid refresh token.
+      responses:
+        200:
+          description: Successful response
+        404:
+          description: Email address not found
+    put:
+      summary:
+        Requests that the user's password be reset. Requires an e-mail address that matches the refresh token.
+        Also requires a reset code that has not timed out
+      tags:
+        - Authentication
+      parameters:
+        - $ref: '#/parameters/reset_finish'
+      description: |
+        Will reset the users password to the requested value if the refresh token is valid, matches the email address,
+        and the reset code is valid and current.
+      responses:
+        200:
+          description: Successful response
+        400:
+          description: Request not valid
   # API to shut down the server
   /shutdown:
     post:
@@ -187,6 +222,46 @@ parameters:
     required: false
     type: string
     description: String to filter search with
+  reset_finish:
+    in: body
+    name: reset_finish
+    description: Fields required to complete password reset
+    schema:
+      type: object
+      required:
+        - email
+        - password
+        - reset_code
+      properties:
+        email:
+          type: string
+          description: User email address for password reset
+          minLength: 4
+          maxLength: 80
+        password:
+          type: string
+          description: New Password
+          minLength: 8
+          maxLength: 32
+        reset_code:
+          type: string
+          description: Reset code
+          minLength: 6
+          maxLength: 6
+  reset_start:
+    name: reset_start
+    in: body
+    description: Fields required to start password reset
+    schema:
+      type: object
+      required:
+        - email
+      properties:
+        email:
+          type: string
+          description: User email address for password reset
+          minLength: 4
+          maxLength: 80
 
 definitions:
   Login:
