# server/src/dm/User.py
@@ -1,6 +1,6 @@
 """User.py - Module containing the user classes for the data model"""
 import uuid
-from sqlalchemy import Column, String, JSON
+from sqlalchemy import Column, DateTime, JSON, String
 from sqlalchemy.dialects.mysql import BINARY
 from passlib.apps import custom_app_context as pwd_context
 from .base import Base
@@ -15,7 +15,12 @@ class User(Base):
     phone = Column(String(20), index=True, unique=True)
     password_hash = Column(String(128))
     preferences = Column(JSON)
-    roles = Column(String(120))
+    roles = Column(String(120)) # Comma separated list of roles
+    source = Column(String(32)) # One of Local, Facebook currently
+    reset_code = Column(String(6)) # Code for resetting password
+    reset_expires = Column(DateTime) # Expiration timestamp for refresh code
+    first_name = Column(String(80)) # User first name
+    last_name = Column(String(80)) # User last name
 
     def get_uuid(self):
         """Returns the text version of the UUID, the binary version is stored in the database"""
